--- a/QMake/Ravl.QMake.Defs.html
+++ b/QMake/Ravl.QMake.Defs.html
@@ -451,7 +451,7 @@ a specification of these files:
 <LI><DT><A NAME="AUXFILES"></A><B>AUXFILES, AUXDIR</B></DT>
 <DD>Use these for data files that need to end up somewhere where your program
 will always find them.  All files listed in AUXFILES are installed in
-$PROJECT_OUT/AUXDIR.  If AUXDIR is not used, the files are installed in $PROJECT_OUT.  Thus:<PRE>
+$PROJECT_OUT/$AUXDIR.  If AUXDIR is not used, the files are installed in $PROJECT_OUT.  Thus:<PRE>
 AUXFILES = mask.png
 AUXDIR = share/data
 </PRE> will install the file mask.png in the directory $PROJECT_OUT/share/data.  Any necessary subdirectories are automatically created.
