mended broken links
git-svn-id: https://ravl.svn.sourceforge.net/svnroot/ravl/main/Ravl@6899 7226f50c-d813-0410-99bf-979b288ab488

--- a/GUI/GTK/tutorial.html
+++ b/GUI/GTK/tutorial.html
@@ -30,13 +30,13 @@
     <p>If you hit a button, select a menu item, or move the mouse
     across a canvas, you would I guess expect something to happen.
     For example in the case of the button, to do this, there is a <a
-    href="../Auto/Basic/Tree/Ravl.OS.Signals.html">Connect</a>
+    href="../Auto/Basic/Tree/Ravl.API.OS.Signals.html">Connect</a>
     function that associates the button class to the function that is
     to be executed, and to a signal that is used to provide a message
     at the time the button is pressed.  An illustration of the
     mechanism can be found in the code for the Button helper functions
     found towards the bottom of <a
-    href="../Auto/Basic/Tree/Ravl.GUI.Control.html">this page</a>.
+    href="../Auto/Basic/Tree/Ravl.API.Graphics.GTK.Control.html">this page</a>.
     </p>
 
     <p>A "hands-on" way to learn to use this library is by looking
@@ -69,7 +69,7 @@
     <address><a href="mailto:w.christmas@ee.surrey.ac.uk">Bill Christmas</a></address>
 <!-- Created: Fri Dec 20 12:05:17 GMT 2002 -->
 <!-- hhmts start -->
-Last modified: Wed Apr  2 14:57:07 BST 2008
+Last modified: Tue Jul 29 12:05:19 BST 2008
 <!-- hhmts end -->
   </body>
 </html>
