Updated doc; added example; "-p -" - > stdout
git-svn-id: https://ravl.svn.sourceforge.net/svnroot/ravl/main/Ravl@6922 7226f50c-d813-0410-99bf-979b288ab488

--- a/Applications/ClassWizard/Ravl.API.Source_Tools.Class_Wizard.html
+++ b/Applications/ClassWizard/Ravl.API.Source_Tools.Class_Wizard.html
@@ -5,22 +5,34 @@
   </head>
 
   <body>
+<pre>
+Usage: cwiz [options] 
+   -p () [] Prefix to add to modified files, can be used to check results before applying the changes directly.  
+   -v (false) [false] Verbose mode. 
+   arg (.) [.] Input directory.  
+   -d (false) [false] Dry run, don't write any files. 
+   -s (false) [false] Write stubs. 
+   -dt (false) [false] Dump parse tree. 
+   -help (true) [false] Print usage information. 
+</pre>
     <p>Class wizard is program designed to help with writing and maintaining Ravl style 'big objects'.  You write the body class, exactly as it should eventually be:
 </p>    <ul>
       <li>with class name ending <code>...BodyC</code></li>
       <li>with an entry under <code>HEADERS</code> in the <code>defs.mk</code> file</li>
     </ul>
-    <p>If you run <code>cwiz</code> (with no options) it will add the handle class to all appropriately-formatted body classes that it finds, in that directory and any nested directories.  By default, the results are written to a file with name prepended with "_".
-</p>
+    <p>If you run <code>cwiz</code> (with no options) it will add the handle class to all appropriately-formatted body classes that it finds, in that directory and any nested directories.  </p>
+
+    <p><a href="../../../html/CwizExample.hh">Download this example</a> and try it yourself.</p>
 
 <h2>Notes:</h2>
 
 <ul>
-<li> Uses the public part of the body class as reference to maintain the handle class.
-<li> Modifies existing header files, no need for seperate header compilation stage. 
-Default currently prefixes modified file with an underscore, use -p "" to replace original file.
-<li> Works around any modifications made by the author.
-<li> All methods and classes that are added are marked with '//!author:cwiz'
+      <li>By default, the header file is overwritten.  Use the "<code>-p</code>" option to specify a different o/p file.  Use "<code>-p -</code>" to write o/p to the terminal.</li>
+<li> Uses the public part of the body class as reference to maintain the handle class.</li>
+<li> Modifies existing header files, no need for seperate header compilation stage. </li>
+      <li>Updates existing handle classes when additions are made to body classes.</li>
+<li> Works around any modifications made by the author.</li>
+<li> All methods and classes that are added are marked with '//!author:cwiz'.</li>
 </ul>
 
 <p>
