Added links to colour components etc. on Wikipedia
git-svn-id: https://ravl.svn.sourceforge.net/svnroot/ravl/main/Ravl@6951 7226f50c-d813-0410-99bf-979b288ab488

--- a/Image/Base/Ravl.API.Images.Pixel_Types.html
+++ b/Image/Base/Ravl.API.Images.Pixel_Types.html
@@ -5,5 +5,13 @@
   </head>
 
   <body>
+    <p>Useful discussions about the subtleties of the differences between YUV and YCbCr together with chroma subsampling (YUV422 etc) can be found on Wikipedia at these sites:</p>
+    <ul>
+      <li><a href="http://en.wikipedia.org/wiki/YUV">YUV</li>
+      <li><a href="http://en.wikipedia.org/wiki/CCIR_601">Rec 601</a></li>
+      <li><a href="http://en.wikipedia.org/wiki/YCbCr">YCrCb</a></li>
+      <li><a href="http://en.wikipedia.org/wiki/Chroma_subsampling">Chroma subsampling</a> and <a href="http://en.wikipedia.org/wiki/Talk:Chroma_subsampling">associated discussion</a></li>
+    </ul>
+
   </body>
 </html>
