Reorganised conversion function documentation
git-svn-id: https://ravl.svn.sourceforge.net/svnroot/ravl/main/Ravl@6970 7226f50c-d813-0410-99bf-979b288ab488

--- a/Image/Base/Ravl.API.Images.Pixel_Types.html
+++ b/Image/Base/Ravl.API.Images.Pixel_Types.html
@@ -1,20 +1,46 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<!--! children="Basic;YUV;HSV;YCbCr" -->
+<!--! children="Grey Level;RGB;YUV;HSV;YCbCr" -->
 <html>
   <head>
     <title>Pixel representations</title>
   </head>
 
   <body>
-    <p>There is much confusion about the difference between YUV and YCbCr.  Within RAVL, the only notable difference is in the matrix values used to convert between YUV (or YCrCb) and RGB.  The term YUV is frequently used when YCrCb is meant.  We have introduced separate pixel classes to help people produce the correct colour rendering of their images.</p>
-    <ul>
-      <li>The YUV/RGB conversion matrices traditionally used by the image processing community are based on those used in analogue colour television.</li>
+    <p>The pixel classes are grouped into subtopics according to the colour
+    space used.  The relevant image conversion functions are included in each
+    group, as well as in a <a href="Ravl.API.Images.Converters.html">complete
+    list</a>.  Subtopics also contain conversions between the subtopic colour
+    space and colour spaces further up the list.</p>
 
-      <li>The YCrCb/RGB conversion matrices are based on those used in digital television sources.</li>
+    <p>Note that YUV colour components are a linear combination of
+    RGB components; hence the U and V components <i>do</i> contain luminance
+    information.  (E.g. doubling R, G and B components will, after conversion
+    to YUV, double the U and V components, even though the chromaticity has
+    not changed.)  If you need a representation that separates luminance and
+    chromaticity completely, use the HSV classes.</p>
+
+    <p>There is much confusion about the difference between YUV and YCbCr, and
+    the term YUV is frequently used when YCrCb is meant:</p>
+
+    <ul>
+      <li>The colour spaces for YUV and YCbCr are different; hence within
+      RAVL, the difference is manifested in the matrix values used to convert
+      between YUV (or YCrCb) and RGB.  We have introduced separate pixel
+      classes for each to help people produce the correct colour rendering of
+      their images. </li>
+
+      <li>The YUV colour space traditionally used by the image processing
+      community is based on the colour space used in analogue composite colour
+      television signals.</li>
+
+      <li> YCrCb is only relevant in the context of ITU Rec. 601 digital video
+      sources (or high-def equivalents).  Hence use YCrCb only if you are
+      operating directly on these sources or files grabbed directly from
+      them.</li>
     </ul>
+
  
     <p>See the relevant subtopic for more information.</p>
-
 
 
   </body>
