Fixed broken link
git-svn-id: https://ravl.svn.sourceforge.net/svnroot/ravl/main/Ravl@7051 7226f50c-d813-0410-99bf-979b288ab488

--- a/Contrib/LibFFmpeg/LibFFmpeg.html
+++ b/Contrib/LibFFmpeg/LibFFmpeg.html
@@ -9,12 +9,12 @@
 
     <p>Use library <code>RavlLibFFmpeg</code></p>
 
-    <p>See <a href="ffmpeg.org">here</a> for more details</p>
+    <p>See <a href="http://www.ffmpeg.org">here</a> for more details</p>
     <hr>
     <address><a href="mailto:w.christmas@surrey.ac.uk">Bill Christmas</a></address>
 <!-- Created: Wed Nov  9 14:45:22 GMT 2005 -->
 <!-- hhmts start -->
-Last modified: Tue Sep 19 18:34:21 BST 2006
+Last modified: Tue Dec  2 17:46:28 GMT 2008
 <!-- hhmts end -->
   </body>
 </html>
