--- a/Image/Base/YCbCr_Pixel_Types.html
+++ b/Image/Base/YCbCr_Pixel_Types.html
@@ -10,7 +10,7 @@
     <ul>
       <li> Standard definition television, described in <a href="http://en.wikipedia.org/wiki/CCIR_601">ITU Rec 601</a>.  In RAVL, these are the "<code>...YCbCrBT601...</code>" pixel types.</li>
 
-      <li> High definition television, described in SMPTE 274 and <a href="http://www.ebu.ch/CMSimages/en/tec_doc_t3299_tcm6-23327.pdf">EBU - TECH 3299</a>.  These are appearing "soon" in RAVL.</li>
+      <li> High definition television, described in SMPTE 274 and <a href="http://www.ebu.ch/CMSimages/en/tec_doc_t3299_tcm6-23327.pdf">EBU - TECH 3299</a>.  In RAVL, these are the "<code>...YCbCrBT709...</code>" pixel types.</li>
 
     </ul> 
 
