--- a/Image/Ravl.API.Images.Converters.html
+++ b/Image/Ravl.API.Images.Converters.html
@@ -4,5 +4,6 @@
     <title>Explicit image conversion functions</title>
   </head>
   <body>
+    <p>If the converter you need is not here, it is trivial to write your own.</p>
   </body>
 </html>
