--- a/Math/Geometry/Ravl.API.Math.Geometry.html
+++ b/Math/Geometry/Ravl.API.Math.Geometry.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
   <head>
-    <title>General geometry</title>
+    <title>Euclidean geometry, including fixed-sized vectors, matrices etc.</title>
   </head>
 
   <body>
