--- a/Math/LinearAlgebra/Ravl.API.Math.Linear_Algebra.html
+++ b/Math/LinearAlgebra/Ravl.API.Math.Linear_Algebra.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
   <head>
-    <title>Matrices, vectors and operations on them</title>
+    <title>Variable-sized matrices, vectors and operations on them</title>
   </head>
   <body>
   </body>
