Added link to example; added grid of "arrows" to example
git-svn-id: https://ravl.svn.sourceforge.net/svnroot/ravl/main/Ravl@7175 7226f50c-d813-0410-99bf-979b288ab488

--- a/GUI/DPDisplay/Ravl.API.GUI.Data_Display.html
+++ b/GUI/DPDisplay/Ravl.API.GUI.Data_Display.html
@@ -46,8 +46,11 @@
   Save("@XA:Images", arrayOfPoints);
 </pre>
 
-    <p>This is relevant if you want for example to add
-    graphics to an image.  You can of course add graphical objects to the
+    <p>This is relevant if you want for example to add graphics to an image.
+    See the <a href="../Application/exDPWindow.html">example</a> for more
+    details.</p>
+
+    <p>You can of course add graphical objects to the
     image object, using the <a href="Ravl.API.Images.Drawing.html">pixel-based
     drawing functions</a>.  The advantages to using the "@XA" virtual file
     approach are:</p><ul>
