Added content to Documentation.Sections.html
git-svn-id: https://ravl.svn.sourceforge.net/svnroot/ravl/main/Ravl@7177 7226f50c-d813-0410-99bf-979b288ab488

--- a/SourceTools/CxxDoc/Documentation.Code.html
+++ b/SourceTools/CxxDoc/Documentation.Code.html
@@ -2,7 +2,7 @@
 <HTML>
 
   <head>
-    <title>Documenting your code</title>
+    <title>Documenting your classes</title>
     <!--! author="Robert Crida" -->
     <!--! docentry="Ravl.Documentation.Code" -->
   </head>
